--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -99,6 +99,90 @@ h1 {
   line-height: 24px;
 }
 
+.counter {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 15px 15px;
+}
+
+.btn_shop {
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  border-radius: 20%;
+  background-color: #b3cff2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  padding: 15px;
+  gap: 5px;
+  font-size: 25px;
+  font-family: ‘Open Sans’;
+  font-weight: bold;
+  color: #0d0c0c;
+  border: 1px solid #d6d7db;
+}
+
+.btn_shop--cart {
+  
+    margin-top: 5px;
+    width: 100%;
+    height: 40px;
+    border: none;
+    background: linear-gradient(to bottom right, #B8D7FF, #8EB7EB);
+    border-radius: 2px;
+    cursor: pointer;
+    font-size: 16px;
+   
+    font-weight: 600;
+    color: #202020;
+   
+ 
+}
+.btn_shop--cart:hover {  
+  cursor: pointer;
+  margin-top: 5px;
+  width: 100%;
+  height: 40px;
+  border: none;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  border-radius: 2px;
+  cursor: pointer;
+  font-size: 16px;  
+  font-weight: 600;
+  color: #fff;
+ 
+
+}
+
+.btn_shop:hover {
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  border-radius: 20%;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  font-family: ‘Open Sans’;
+  font-weight: bold;
+  color: #f8ebeb;
+ 
+}
+.count {
+  font-size: 20px;
+  font-family: ‘Open Sans’;
+  font-weight: 900;
+  color: #202020;
+}
+
 @media only screen and (min-width: 1200px) {
   .content__blog__container {
     width: 84%;
