--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  background: linear-gradient(90deg, rgb(54, 9, 127) 0%, rgb(26, 23, 23) 100%);
   height: 80px;
   display: flex;
   justify-content: center;
@@ -15,7 +15,7 @@
   justify-content: center;
   align-items: center;
   height: 80px;
-  max-width: 1500px;
+  max-width: 1500px;  
 }
 
 .navbar-logo {
@@ -27,6 +27,7 @@
   font-size: 2rem;
   display: flex;
   align-items: center;
+  width: 220px;
 }
 
 .fa-typo3 {
@@ -47,6 +48,7 @@
 
 .nav-item {
   height: 80px;
+ 
 }
 
 .nav-links {
